# Privdns-Gateway

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  install.sh  pyproject.toml  quick-install.sh  uninstall.sh
.github/: copilot-instructions.md
config/: pdg.conf  policies.conf  rules.conf
deploy/: install.sh
docs/: INSTALL.md  MANAGEMENT.md  MIGRATION-FROM-ORIGINAL.md  QUICKSTART.md  architecture.md  client-setup.md  deployment.md  forum-post.md  native-extensions.md
etc/: block-dns-bypass.keyword.txt  block-dns-bypass.txt  proxy-domains.txt
scripts/: cert-renew.sh  export-journal.sh  gen-ios-profile.sh  intercept-cert-renew.sh  migrate-privdns-gateway.sh  reload-rules.sh  renew-hook.sh  setup-tgbot.sh
tests/: dns-policy-test.sh  functional-test.sh  integration-smoke.md  mihomo-compact-suffix-regression.sh  mihomo-sniff-cache-regression.sh  run-tests.sh  test-admin-api.py  test-admin-assets.py  test-admin-deploy.sh  test-bot-control-ux.py  test-bot-ios.py  test-bot-nav.py  test-bot-status.py  test-bot-transport.py  test-doctor-firewall.py  test-exit-rename.py  test-fw-migration.sh  test-gms-migration.sh  test-ios-deploy.sh  test-ios-profile-http.py  test-legacy-migration.sh  test-outbound-schema.sh  test-parse-links.py  test-pdg-control.py  test-pdg-service.py  test-release-flow.sh  test-rule-priority.py  test-uninstall.sh  test_5gpndns_policy.sh  test_cert_renew.sh  test_cert_role_tree.sh  test_cleanup_policy.sh  test_compiler.py  test_dns_env_writes.sh  test_gum_policy.sh  (+20 more)
(+420 files in other folders)
