[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "privdns-gateway"
version = "0.1.0"
description = "Android/iOS 私密 DNS 单入口多出口分流网关 (dnsdist + sing-box 规则编译器与控制面)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# 核心控制面零三方依赖 (仅标准库)。TG Bot 阶段再加 telegram extra。
dependencies = []

[project.optional-dependencies]
bot = ["python-telegram-bot>=21"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
pdg = "pdg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
